--- a/BankApp/WebContent/AtmInterface.html
+++ b/BankApp/WebContent/AtmInterface.html
@@ -27,7 +27,7 @@
           <td id="nameError" class="error"></td>
         </tr><tr>
           <td>Password:</td>
-          <td><input type="text" name="pass" id="pass"/></td>
+          <td><input type="password" name="pass" id="pass"/></td>
           <td id="passError" class="error"></td>
         </tr>
         <tr><td>
