--- a/BankApp/WebContent/BankStatsBak.html
+++ b/BankApp/WebContent/BankStatsBak.html
@@ -65,7 +65,7 @@ th, td {
   <table style="border:0px;">
     <tr>
       <td style="padding:0px;">
-        <div id="next"><button type="button" onclick="location.href='ClientSearch.html';">Search client</button></div>
+        <div id="next"><button type="button" onclick="location.href='SearchClient.html';">Search client</button></div>
       </td>
       <td>
         <div id="next"><button type="button" onclick="location.href='AddClient.html';">Add client</button></div>
