--- a/BankApp/WebContent/ClientSearch.html
+++ b/BankApp/WebContent/ClientSearch.html
@@ -14,7 +14,7 @@
     <h1>Search client</h1>
   </div>
   <div id="mid">
-    <form id="form" action="form" method="POST" target="_blank">
+    <form id="form" action="/ClientSearch" method="POST" target="_self">
       <table>
         <tr><td colspan=2 style="font-weight:bold;">BankApp Co. ATM terminal:</td></tr>
         <tr>
